--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,6 +1,6 @@
 blank_issues_enabled: true
 
 contact_links:
-  - name: Test
+  - name: Test 🎶
     url: https://www.google.com
     about: Go to google for help
