--- a/.github/ISSUE_TEMPLATE/Contribution.yml
+++ b/.github/ISSUE_TEMPLATE/Contribution.yml
@@ -1,74 +1,62 @@
-name: Prototype Contribution Survey Form
-description: A survey to asses contribution by individuals to the autonomous organisation or SecretDecks directly
-title: "<year(number)>-<month(number)>-<your-name>-SecretDecks-ContributionSurvey"
-labels: [Contribution Survey]
+name: Bug Report
+description: File a bug report
+title: "[Bug]: "
+labels: ["bug", "triage"]
+assignees:
+  - octocat
 body:
-- type: markdown
-  attributes:
-    value: |
-      Thanks for taking the time to fill out this Contribution Survey.
-- type: input
-  id: contact
-  attributes:
-    label: Contact Details
-    description: How can we get in touch with you if we need more info?
-    placeholder: ex. email@example.com
-  validations:
-    required: false
-- type: dropdown
-  id: contributer
-  attributes:
-    label: Contributer
-    multiple: false
-    options:
-    - Dan
-    - Tyler
-    - Heather
-    - Stephen
-- type: input
-  id: terms
-  attributes:
-    label: General Information
-    description: This provides an overall summary or context of a member, when they became involved and how many days they have worked. This could be supplemented with a contribution vote by peers to capture the more intangible contribution a member has made.
-    options:
-    - label:  Date joined ACO - [Day/Month/Year]
+  - type: markdown
+    attributes:
+      value: |
+        Thanks for taking the time to fill out this bug report!
+  - type: input
+    id: contact
+    attributes:
+      label: Contact Details
+      description: How can we get in touch with you if we need more info?
+      placeholder: ex. email@example.com
+    validations:
+      required: false
+  - type: textarea
+    id: what-happened
+    attributes:
+      label: What happened?
+      description: Also tell us, what did you expect to happen?
+      placeholder: Tell us what you see!
+      value: "A bug happened!"
+    validations:
       required: true
-    - label: Days / Hours worked overall - [00 Days/Hours]
+  - type: dropdown
+    id: version
+    attributes:
+      label: Version
+      description: What version of our software are you running?
+      options:
+        - 1.0.2 (Default)
+        - 1.0.3 (Edge)
+    validations:
       required: true
-    - label: Cost of contribution (from member perspective) - [$ 0]
-      required: true
-      
-- type: dropdown
-  id: vote
-  attributes:
-    label: Contribution vote
-    description: Please select colleagues to confirm your contribution
-    required: true
-    multiple: true
-    options:
-    - DanM3rcurius
-    - Tyler
-    - Heather
-    - Stephen
-    - Tamagit
-      
-- type: checkboxes
-  id: Development
-  attributes:
-    label: Development
-    description:  Each work area will be divided into appropriate categories (e.g. Code, UX etc.) and be accompanied with an "Outputs" section where members can record what they have produced, built, documented etc.
-    options:
-    - label: Code
-      required: false
-    - label: UX
-      required: false
-    - label: Test
-      required: false
-    - label: Support
-      required: false
-- type: textarea
-  id: zzzz
-  attributes:
-    label: Outputs 
-    placeholder: What has been produced, built, documented etc.
-    render : text
+  - type: dropdown
+    id: browsers
+    attributes:
+      label: What browsers are you seeing the problem on?
+      multiple: true
+      options:
+        - Firefox
+        - Chrome
+        - Safari
+        - Microsoft Edge
+  - type: textarea
+    id: logs
+    attributes:
+      label: Relevant log output
+      description: Please copy and paste any relevant log output. This will be automatically formatted into code, so no need for backticks.
+      render: shell
+  - type: checkboxes
+    id: terms
+    attributes:
+      label: Code of Conduct
+      description: By submitting this issue, you agree to follow our [Code of Conduct](https://example.com)
+      options:
+        - label: I agree to follow this project's Code of Conduct
+          required: true
