--- a/.github/ISSUE_TEMPLATE/Contribution.yml
+++ b/.github/ISSUE_TEMPLATE/Contribution.yml
@@ -1,22 +1,116 @@
-name: Bug Report
-description: File a bug report
-title: "[Bug]: "
-labels: ["bug", "triage"]
-assignees:
-  - octocat
+name: Prototype Contribution Survey Form
+description: A survey to asses contribution by individuals to the autonomous organisation or SecretDecks directly
+title: "<year(number)>-<month(number)>-<your-name>-SecretDecks-ContributionSurvey"
+labels: [Contribution Survey]
+# assignees:
+#  - is this needed?
 body:
   - type: markdown
     attributes:
       value: |
-        Thanks for taking the time to fill out this bug report!
+        Thanks for taking the time to fill out this Contribution Survey.
+
   - type: input
-    id: contact
+    id: date-joined
     attributes:
-      label: Contact Details
-      description: How can we get in touch with you if we need more info?
-      placeholder: ex. email@example.com
+      label: Date Joined ACO
+      description: (Month/Day/Year)
+      placeholder: Ex. 11/08/2020
+    validations:
+      required: true
+  - type: input
+    id: hours-worked
+    attributes:
+      label: Hours Worked (This Month)
+    validations:
+      required: true
+  - type: input
+    id: hourly-rate
+    attributes:
+      label: Local Hourly Rate
+    validations:
+      required: true
+  - type: input
+    id: other-expenses
+    attributes:
+      label: Other Expenses
     validations:
       required: false
+  - type: input
+    id: total-cost
+    attributes:
+      label: Total Cost of Contribution
+      description: in €, this month
+    validations:
+      required: true
+  - type: dropdown
+    id: peer-review
+    attributes:
+      label: Contribution Peer Review
+      description: Select team member to review your constributions
+      options:
+        - Dan
+        - Tyler
+        - Heather
+        - Stephen
+    validations:
+      required: true
+
+  - type: markdown
+    attributes:
+      value: "***"
+
+  - type: checkboxes
+    id: teams
+    attributes:
+      label: Teams (Teamworkspaces) contributed to
+      options:
+        - label: Website
+        - label: Governance
+        - label: Content & Metaverse
+  - type: input
+    id: output
+    attributes:
+      label: Output
+      description: What has been produced, built, or documented etc.
+    validations:
+      required: true
+
+  - type: markdown
+    attributes:
+      value: "***"
+
+  - type: checkboxes
+    id: intangibles
+    attributes:
+      label: Intangibles
+      options:
+        - label: Greeting new members
+        - label: Mentoring
+        - label: Social / Emotional Support
+        - label: Communicating news and ideas in Discord
+
+  - type: markdown
+    attributes:
+      value: "***"
+
+  - type: input
+    id: external-work
+    attributes:
+      label: Team External Work
+      description: All items that are not Website, Governance, or Content & Metaverse
+    validations:
+      required: false
+
+  - type: markdown
+    attributes:
+      value: "***"
+
+  - type: markdown
+    attributes:
+      value: |
+        "## Cost & Remuneration Calculation"
+
   - type: textarea
     id: what-happened
     attributes:
