--- a/.github/ISSUE_TEMPLATE/Contribution.yml
+++ b/.github/ISSUE_TEMPLATE/Contribution.yml
@@ -108,8 +108,7 @@ body:
 
   - type: markdown
     attributes:
-      value: |
-        "## Cost & Remuneration Calculation"
+      value: "## Cost & Remuneration Calculation"
 
   - type: textarea
     id: what-happened
